[package]
name = "frl-proxy"
version = "0.9.0"
authors = ["Andrew Dorton <adorton@adobe.com>", "Daniel Brotsky <dbrotsky@adobe.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.0.1", features = ["full"] }
hyper = { version = "0.14.2", features = ["full"] }
hyper-tls = "0.5"
native-tls = "0.2.1"
tokio-native-tls = "0.3"
async-stream = "0.3.0"
futures = "0.3.1"
futures-util = "0.3.1"
config = "0.10"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"
structopt = "0.3"
eyre = "0.6"
log = "0.4"
fern = "0.6"
chrono = "0.4"
ctrlc = "3.1"
openssl-probe = "0.1.2"
sqlx = { version = "0.4.2", default-features = false, features = [ "runtime-tokio-native-tls", "sqlite" ] }
url = "2.1.1"
sys-info = "0.7.0"
