[package]
name = "frl-proxy"
version = "1.1.0"
authors = ["Andrew Dorton <adorton@adobe.com>", "Daniel Brotsky <dbrotsky@adobe.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.0.3", features = ["full"] }
hyper = { version = "0.14.2", features = ["full"] }
hyper-proxy = "0.9.1"
hyper-tls = "0.5"
native-tls = "0.2.7"
tokio-native-tls = "0.3"
async-stream = "0.3.0"
futures = "0.3.1"
futures-util = "0.3.1"
headers = "0.3.4"
config = "0.10"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
toml = "0.5"
structopt = "0.3"
eyre = "0.6"
log = "0.4"
fern = "0.6"
chrono = "0.4"
ctrlc = { version = "3.1", features = ["termination"] }
openssl-probe = "0.1.2"
sqlx = { version = "0.5.1", default-features = false, features = [ "runtime-tokio-native-tls", "sqlite" ] }
url = "2.1.1"
sys-info = "0.7.0"
dialoguer = "0.8.0"
